--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     
     
 
-<script src="{{ site.baseurl }}assets/js/jquery-2.1.1.min.js" type="text/javascript"></script>
-<script src="{{ site.baseurl }}assets/js/functions.js" type="text/javascript"></script>
+<script src="assets/js/jquery-2.1.1.min.js" type="text/javascript"></script>
+<script src="assets/js/functions.js" type="text/javascript"></script>
 </body>
 </html>
