--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="barNav"> 
     <a href="{{ site.baseurl }}">Gimmie<span id="mmo">Make Money Online</span></a>
     
-    <a href="http://carterrink.com/blog/">Blog.</a>
+    <a href="">Blog.</a>
 
 </div>
 
