--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,24 @@
 <div class="barNav"> 
     <a href="{{ site.baseurl }}">Gimmie<span id="mmo">Make Money Online</span></a>
     
-    <a href="">Blog.</a>
+    <a href="">Side Income</a>
+    <a href="">Work From Home</a>
+    <a href="">Deals</a>
 
 </div>
 
 <div class="cover" onclick="toggleNav();"></div>
+
+
 <div class="hamburger" id="hamburger" onclick="toggleNav();">
+
     <div></div>
      <div></div>
     <div></div> 
-      <h3>Gimmie</h3>
+    <h3>Gimmie</h3>
+
 </div>    
+
     
 <nav>
   <div class="logo">
@@ -19,7 +26,9 @@
   </div>
   <div class="links">
     <a href="{{ site.baseurl }}">Home</a>
-    <a href="{{ site.baseurl }}/blog">Blog</a>
+    <a href="">Side Income</a>
+    <a href="">Work From Home</a>
+    <a href="">Deals</a>
 
   </div>
   <footer>
