--- a/assets/css/3-modules/_-modules-header.scss
+++ b/assets/css/3-modules/_-modules-header.scss
@@ -5,13 +5,19 @@
   background: #fbfbfb;
   border-bottom: 3px solid #f5f5f5;
   height: 72px;
+  position: fixed;
+  width: 100%;
+  
+
 }
+
 
 .barNav a:first-child {
   margin-right: auto;
   font-size: 48px;
   margin-top: -22px;
   cursor: pointer;
+  color: #BD5248;
 }
 
 #mmo {
@@ -44,20 +50,22 @@
 
 .barNav a:hover {
 
-color: white;
+color: #f8f9f8;
 background-position: 0 100%;
 } 
 
 .hamburger {
+    
   position: fixed;
   z-index: 9999;
   padding: 15px;
+  left: 0;
 }
 .hamburger:hover {
   cursor: pointer;
 }
 .hamburger div {
-  background-color: #2E2D33;
+  background-color: #4879bd;
   border-radius: 1px;
   height: 6px;
   width: 30px;
@@ -66,9 +74,10 @@ background-position: 0 100%;
   margin-bottom: 5px;
 }
 
-.hamburger h3{
+.hamburger h3{  
+margin-left: 65vw;
 margin-top: -35px;
-margin-left: 40px;
+
 }
 
 nav {
