--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <div class="foot">
-    <a href="https://twitter.com/carter_rink"><i class="fa fa-twitter"></i></a>
-    <a class="gfoot" href="{{ site.baseurl }}">Gimmie</a>
+    <a href=""><i class="fa fa-twitter"></i></a>
+    <a class="gfoot" href="{{ site.url }}">Gimmie</a>
 </div>
