--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <div class="barNav"> 
-    <a href="{{ site.baseurl }}">Gimmie<span id="mmo">Make Money Online</span></a>
+    <a href="{{ site.url }}">Gimmie<span id="mmo">Make Money Online</span></a>
     
     <a href="">Side Income</a>
     <a href="">Work From Home</a>
-    <a href="">Deals</a>
+    <a href="">Investing</a>
 
 </div>
 
@@ -28,7 +28,7 @@
     <a href="{{ site.baseurl }}">Home</a>
     <a href="">Side Income</a>
     <a href="">Work From Home</a>
-    <a href="">Deals</a>
+    <a href="">Investing</a>
 
   </div>
   <footer>
