--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="barNav"> 
     <a href="{{ site.url }}">Gimmie<span id="mmo">Make Money Online</span></a>
     
-    <a href="">Side Income</a>
+    <a href="gimmiemonies.com/sideincome">Side Income</a>
     <a href="">Work From Home</a>
     <a href="">Investing</a>
 
