--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="barNav"> 
     <a href="{{ site.url }}">Gimmie<span id="mmo">Make Money Online</span></a>
     
-    <a href="{{ site.url }}/sideincome">Side Income</a>
+    <a href="{{ site.url }}/SideIncome">Side Income</a>
     <a href="">Work From Home</a>
     <a href="">Investing</a>
 
