--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
     <a href="{{ site.url }}">Gimmie<span id="mmo">Make Money Online</span></a>
     
     <a href="{{ site.url }}/SideIncome">Side Income</a>
-    <a href="">Work From Home</a>
-    <a href="">Investing</a>
+    <a href="{{ site.url }}/Work%20From%20Home/">Work From Home</a>
+    <a href="{{ site.url }}/Investing">Investing</a>
 
 </div>
 
