--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="barNav"> 
     <a href="{{ site.url }}">Gimmie<span id="mmo">Make Money Online</span></a>
     
-    <a href="{{ site.url }}/SideIncome">Side Income</a>
+    <a href="{{ site.url }}/Side%20Income/">Side Income</a>
     <a href="{{ site.url }}/Work%20From%20Home/">Work From Home</a>
     <a href="{{ site.url }}/Investing">Investing</a>
 
