--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,9 +26,9 @@
   </div>
   <div class="links">
     <a href="{{ site.baseurl }}">Home</a>
-    <a href="">Side Income</a>
-    <a href="">Work From Home</a>
-    <a href="">Investing</a>
+    <a href="{{ site.url }}/Side%20Income/">Side Income</a>
+    <a href="{{ site.url }}/Work%20From%20Home/">Work From Home</a>
+    <a href="{{ site.url }}/Investing">Investing</a>
 
   </div>
   <footer>
