--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
     <h2>Gimmie</h2>
   </div>
   <div class="links">
-    <a href="{{ site.baseurl }}">Home</a>
+    <a href="{{ site.url }}">Home</a>
     <a href="{{ site.url }}/Side%20Income/">Side Income</a>
     <a href="{{ site.url }}/Work%20From%20Home/">Work From Home</a>
     <a href="{{ site.url }}/Investing">Investing</a>
