--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,15 @@
     
  {% include footer.html %}
     
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-105671707-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments)};
+  gtag('js', new Date());
+
+  gtag('config', 'UA-105671707-1');
+</script>
     
 
 <script src="{{ site.url }}assets/js/jquery-2.1.1.min.js" type="text/javascript"></script>
