--- a/assets/css/3-modules/_-modules-header.scss
+++ b/assets/css/3-modules/_-modules-header.scss
@@ -22,7 +22,7 @@
 #mmo {
     font-size: 18px;
     padding-left: 8px;
-    color: black;
+    color: #2E2D33;
     font-family: Architects Daughter;
 }
 
