--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <a href="{{ site.url }}/Side%20Income/">Side Income</a>
     <a href="{{ site.url }}/Work%20From%20Home/">Work From Home</a>
     <a href="{{ site.url }}/Investing">Investing</a>
-    <a href="{{ site.url }}/Deals">Deals</a>
+    <a href="{{ site.url }}/deals">Deals</a>
 
 </div>
 
