--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,6 +30,7 @@
     <a href="{{ site.url }}/Side%20Income/">Side Income</a>
     <a href="{{ site.url }}/Work%20From%20Home/">Work From Home</a>
     <a href="{{ site.url }}/Investing">Investing</a>
+    <a href="{{ site.url }}/Deals">Deals</a>
 
   </div>
   <footer>
