--- a/assets/css/4-pages/_-pages-home.scss
+++ b/assets/css/4-pages/_-pages-home.scss
@@ -5,12 +5,16 @@
 
 #h1a {
   text-decoration: none;
-  color: black;
+  color: #2E2D33;
   font-size: 64px;
   font-family: 'Roboto', sans-serif;
   font-weight: bolder;
   line-height: 1.2;
 
+}
+
+#h1a:hover {
+  color: #424247;
 }
 
 .posts:first-child {
