--- a/assets/css/3-modules/_-modules-header.scss
+++ b/assets/css/3-modules/_-modules-header.scss
@@ -57,11 +57,16 @@ background-position: 0 100%;
     
   position: fixed;
   z-index: 9999;
-  padding: 15px;
+  padding: 18px;
   left: 0;
+  border-bottom: 3px solid #f5f5f5;
+  background: white;
+  width: 100%;
+  height: 5%;
 }
 .hamburger:hover {
   cursor: pointer;
+  
 }
 .hamburger div {
   background-color: #4879bd;
@@ -78,7 +83,6 @@ margin-left: 65vw;
 margin-top: -35px;
 
 }
-
 
 
 nav {
