--- a/assets/css/3-modules/_-modules-header.scss
+++ b/assets/css/3-modules/_-modules-header.scss
@@ -59,8 +59,8 @@ background-position: 0 100%;
   z-index: 9999;
   padding: 18px;
   left: 0;
-  border-bottom: 3px solid #f5f5f5;
-  background: white;
+  border-bottom: 3px solid #4879bd;
+  background: #4879bd;
   width: 100%;
   height: 5%;
 }
@@ -69,7 +69,7 @@ background-position: 0 100%;
   
 }
 .hamburger div {
-  background-color: #4879bd;
+  background-color: #BD5248;
   border-radius: 1px;
   height: 6px;
   width: 30px;
@@ -81,6 +81,7 @@ background-position: 0 100%;
 .hamburger h3{  
 margin-left: 65vw;
 margin-top: -35px;
+color: #fbfbfb;
 
 }
 
