--- a/assets/css/3-modules/_-modules-header.scss
+++ b/assets/css/3-modules/_-modules-header.scss
@@ -69,7 +69,7 @@ background-position: 0 100%;
   
 }
 .hamburger div {
-  background-color: #BD5248;
+  background-color: #fbfbfb;
   border-radius: 1px;
   height: 6px;
   width: 30px;
