--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <div class="foot">
     <a href="https://twitter.com/gimmiemonies"><i class="fa fa-twitter"></i></a>
+    <a href="https://www.facebook.com/gimmiemonies/"><i class="fa fa-facebook"></i></a>
     <a class="gfoot" href="{{ site.url }}">Gimmie</a>
 </div>
